Refactor Card and Deck classes