@@ -1,6 +1,7 @@
 package exploding_kittens.game.model;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class Deck {
@@ -16,21 +17,26 @@ public class Deck {
     }
 
     public void addCard(Card card) {
+
         cards.add(card);
     }
     public Card removeTopCard() {
-        return cards.remove(0);
+        return cards.removeFirst();
     }
     public Card getCard(int index) {
+
         return cards.get(index);
     }
     public void insertCard(Card card, int position) {
+
         cards.add(position, card);
     }
     public List<Card> peekTop(int n) {
+
         return new ArrayList<>(cards.subList(0, n));
     }
     public int size() {
+
         return cards.size();
     }
     public List<Card> getCards() {
